Desenvolvimento do script de geracao da base de analise

--- a/datalake/raw/hctr11_webpage.html
+++ b/datalake/raw/hctr11_webpage.html
@@ -91,7 +91,7 @@
 <meta content="#ffffff" name="theme-color"/>
 <link data-turbolinks-track="false" href="/assets/redesign/application-b8df72d2851b422ea7bc86771f5fbf066a21e35cf6df0f3e3026f89bd27d67ad.css" media="all" rel="stylesheet">
 <meta content="authenticity_token" name="csrf-param">
-<meta content="6DmmPiuDoOQCi9kKxwtppF/wv3J223sijqXm4CIXEDAVtBCKLovU9p7cPPf216iP0OvlMVzpIWXcbRsG/v68SA==" name="csrf-token">
+<meta content="Y8c42qKeU0ry7Gyf/WN4KxBx01LdQbsm6NAfPXM610Rzjt3DXQ32aQEFygZsVyY9uab2dJIt9shcCl28NYVGxw==" name="csrf-token">
 </meta></meta></link></meta></link></meta></head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -174,7 +174,7 @@
 <div class="close-signin-signup-wrapper">
 <a class="close-signin-signup" href="javascript:;" id="close-signin"><img alt="Fechar login" src="/assets/icons/fechar-b42fc0c933cfffdbf591556fc1b9f2dc2ed1601e6b39ae0c48289bcf6802b1fe.png"/></a>
 </div>
-<form accept-charset="UTF-8" action="/users/sign_in" id="form-signin" method="post"><input name="utf8" type="hidden" value="✓"/><input name="authenticity_token" type="hidden" value="zZqcNfaeu7VbU8LHGAw46Vl0ktXCefbj9vg4n7IY5YUwFyqB85bPp8cEJzop0PnC1m/IluhLrKSkMMV5bvFJ/Q=="/>
+<form accept-charset="UTF-8" action="/users/sign_in" id="form-signin" method="post"><input name="utf8" type="hidden" value="✓"/><input name="authenticity_token" type="hidden" value="NtG285G6HBP3jgK6moM6RNoXbaApqlx+CwX+yJe91DkmmFPqbim5MARnpCMLt2RSc8BIhmbGEZC/37xJ0QJFug=="/>
 <span id="signin-title">Identifique-se</span>
 <div class="row">
 <div class="form-group col-md-12 col-xs-12">
@@ -211,7 +211,7 @@
 </div>
 </div>
 </div>
-</form> <form accept-charset="UTF-8" action="/users/password" id="form-reset-password" method="post"><input name="utf8" type="hidden" value="✓"/><input name="authenticity_token" type="hidden" value="HxRM66toHgAtGnTOpv9itEHIkP3GiqvHAIbD+SZKEBHimfpfrmBqErFNkTOXI6OfztPKvuy48YBSTj4f+qO8aQ=="/>
+</form> <form accept-charset="UTF-8" action="/users/password" id="form-reset-password" method="post"><input name="utf8" type="hidden" value="✓"/><input name="authenticity_token" type="hidden" value="OP4R0dFvM7w1tjH4jhNUj4v5HC8Y9AMvV9PwDN5IkWIot/TILvyWn8Zfl2EfJwqZIi45CVeYTsHjCbKNmPcA4Q=="/>
 <span id="reset-password-title">Esqueceu sua senha?</span>
 <div class="row">
 <div class="form-group col-md-12 col-xs-12">
@@ -234,7 +234,7 @@
 <a class="close-signin-signup" href="javascript:;" id="close-signup"><img alt="Fechar login" src="/assets/icons/fechar-b42fc0c933cfffdbf591556fc1b9f2dc2ed1601e6b39ae0c48289bcf6802b1fe.png"/></a>
 </div>
 <span id="signup-title">Criar uma conta grátis!</span>
-<form accept-charset="UTF-8" action="/users" id="form-signup" method="post"><input name="utf8" type="hidden" value="✓"/><input name="authenticity_token" type="hidden" value="gjKA7tnWu/puCOyMh5hBD4RgfsQoyDnN7DXsG9CIYrN/vzZa3N7P6PJfCXG2RIAkC3skhwL6Y4q+/RH9DGHOyw=="/>
+<form accept-charset="UTF-8" action="/users" id="form-signup" method="post"><input name="utf8" type="hidden" value="✓"/><input name="authenticity_token" type="hidden" value="h1pJgjTeVsEShlmvxGWvdt8RUAzXoYf4+DjuXXV0Pd2XE6yby03z4uFv/zZVUfFgdsZ1KpjNyhZM4qzcM8usXg=="/>
 <div class="row">
 <div class="form-group col-md-12 col-xs-12">
 <input autocomplete="name" autofocus="autofocus" class="fe-input signin-signup-input form-control tooltip-error name" data-placement="left" data-toggle="tooltip" data-trigger="manual" id="name-signup" name="user[name]" placeholder="Seu nome" type="text"/>
@@ -1572,40 +1572,12 @@ disponíveis aqui.</span></p>
               "contain": true
             }' id="related-fiis-carousel">
 <div class="carousel-cell">
-<div class="item" id="item-BTAL11">
+<div class="item" id="item-XPIN11">
 <div class="bg-wrapper"></div>
-<a href="/funds/btal11">
-<span class="symbol">BTAL11</span>
+<a href="/funds/xpin11">
+<span class="symbol">XPIN11</span>
 <div class="name-wrapper">
-<span class="name">FUNDO DE INVESTIMENTO IMOBILIÁRIO BTG PACTUAL AGRO LOGÍSTICA</span>
-</div>
-</a>
-<span class="admin-title">Adm.</span>
-<span class="admin">
-                      BTG Pactual</span>
-</div>
-</div>
-<div class="carousel-cell">
-<div class="item" id="item-HUSC11">
-<div class="bg-wrapper"></div>
-<a href="/funds/husc11">
-<span class="symbol">HUSC11</span>
-<div class="name-wrapper">
-<span class="name">FDO INV IMOB HOSPITAL UNIMED SUL CAPIXABA</span>
-</div>
-</a>
-<span class="admin-title">Adm.</span>
-<span class="admin">
-                      Rio Bravo</span>
-</div>
-</div>
-<div class="carousel-cell">
-<div class="item" id="item-XPCI11">
-<div class="bg-wrapper"></div>
-<a href="/funds/xpci11">
-<span class="symbol">XPCI11</span>
-<div class="name-wrapper">
-<span class="name">XP CREDITO IMOBILIÁRIO - FDO INV IMOB</span>
+<span class="name">XP INDUSTRIAL FDO INV IMOB - FII</span>
 </div>
 </a>
 <span class="admin-title">Adm.</span>
@@ -1614,68 +1586,12 @@ disponíveis aqui.</span></p>
 </div>
 </div>
 <div class="carousel-cell">
-<div class="item" id="item-XPPR11">
+<div class="item" id="item-SPVJ11">
 <div class="bg-wrapper"></div>
-<a href="/funds/xppr11">
-<span class="symbol">XPPR11</span>
+<a href="/funds/spvj11">
+<span class="symbol">SPVJ11</span>
 <div class="name-wrapper">
-<span class="name">XP PROPERTIES FDO. INV. IMOB.</span>
-</div>
-</a>
-<span class="admin-title">Adm.</span>
-<span class="admin">
-                      Vortx</span>
-</div>
-</div>
-<div class="carousel-cell">
-<div class="item" id="item-VXXV11">
-<div class="bg-wrapper"></div>
-<a href="/funds/vxxv11">
-<span class="symbol">VXXV11</span>
-<div class="name-wrapper">
-<span class="name">VX XII - Fundo de Investimento Imobiliário</span>
-</div>
-</a>
-<span class="admin-title">Adm.</span>
-<span class="admin">
-                      Vortx</span>
-</div>
-</div>
-<div class="carousel-cell">
-<div class="item" id="item-XPSF11">
-<div class="bg-wrapper"></div>
-<a href="/funds/xpsf11">
-<span class="symbol">XPSF11</span>
-<div class="name-wrapper">
-<span class="name">XP SELECTION FDO DE FUNDOS INV IMOB - FII</span>
-</div>
-</a>
-<span class="admin-title">Adm.</span>
-<span class="admin">
-                      XP Investimentos</span>
-</div>
-</div>
-<div class="carousel-cell">
-<div class="item" id="item-FAED11">
-<div class="bg-wrapper"></div>
-<a href="/funds/faed11">
-<span class="symbol">FAED11</span>
-<div class="name-wrapper">
-<span class="name">FDO INV IMOB - FII ANHANGUERA EDUCACIONAL</span>
-</div>
-</a>
-<span class="admin-title">Adm.</span>
-<span class="admin">
-                      BTG Pactual</span>
-</div>
-</div>
-<div class="carousel-cell">
-<div class="item" id="item-YCHY11">
-<div class="bg-wrapper"></div>
-<a href="/funds/ychy11">
-<span class="symbol">YCHY11</span>
-<div class="name-wrapper">
-<span class="name">YAGUARA CAPITAL HIGH YIELD FDO INV IMOB</span>
+<span class="name">FUNDO DE INVESTIMENTO IMOBILIÁRIO SUCCESPAR VAREJO</span>
 </div>
 </a>
 <span class="admin-title">Adm.</span>
@@ -1696,12 +1612,37 @@ disponíveis aqui.</span></p>
 </a>
 </div>
 <div class="carousel-cell">
-<div class="item" id="item-TORD11">
+<div class="item" id="item-TRXF11">
 <div class="bg-wrapper"></div>
-<a href="/funds/tord11">
-<span class="symbol">TORD11</span>
+<a href="/funds/trxf11">
+<span class="symbol">TRXF11</span>
 <div class="name-wrapper">
-<span class="name">TORDESILHAS EI FDO. INV. IMOB.</span>
+<span class="name">TRX REAL ESTATE FDO. INV. IMOB. - FII</span>
+</div>
+</a>
+<span class="admin-title">Adm.</span>
+<span class="admin">
+                      BRL Trust Investimentos</span>
+</div>
+</div>
+<div class="carousel-cell">
+<div class="item" id="item-EGYR11">
+<div class="bg-wrapper"></div>
+<a href="/funds/egyr11">
+<span class="symbol">EGYR11</span>
+<div class="name-wrapper">
+<span class="name">ENERGY RESORT FDO. INVEST. IMOB.</span>
+</div>
+</a>
+</div>
+</div>
+<div class="carousel-cell">
+<div class="item" id="item-TGAR11">
+<div class="bg-wrapper"></div>
+<a href="/funds/tgar11">
+<span class="symbol">TGAR11</span>
+<div class="name-wrapper">
+<span class="name">FDO INV IMOB TG ATIVO REAL</span>
 </div>
 </a>
 <span class="admin-title">Adm.</span>
@@ -1710,17 +1651,73 @@ disponíveis aqui.</span></p>
 </div>
 </div>
 <div class="carousel-cell">
-<div class="item" id="item-URPR11">
+<div class="item" id="item-MAXR11">
 <div class="bg-wrapper"></div>
-<a href="/funds/urpr11">
-<span class="symbol">URPR11</span>
+<a href="/funds/maxr11">
+<span class="symbol">MAXR11</span>
 <div class="name-wrapper">
-<span class="name">URCA PRIME RENDA FUNDO DE INVESTIMENTO IMOBILIÁRIO</span>
+<span class="name">FDO INV IMOB - FII MAX RETAIL</span>
+</div>
+</a>
+<span class="admin-title">Adm.</span>
+<span class="admin">
+                      BTG Pactual</span>
+</div>
+</div>
+<div class="carousel-cell">
+<div class="item" id="item-FCFL11">
+<div class="bg-wrapper"></div>
+<a href="/funds/fcfl11">
+<span class="symbol">FCFL11</span>
+<div class="name-wrapper">
+<span class="name">FDO INV IMOB - FII CAMPUS FARIA LIMA</span>
+</div>
+</a>
+<span class="admin-title">Adm.</span>
+<span class="admin">
+                      BTG Pactual</span>
+</div>
+</div>
+<div class="carousel-cell">
+<div class="item" id="item-VXXV11">
+<div class="bg-wrapper"></div>
+<a href="/funds/vxxv11">
+<span class="symbol">VXXV11</span>
+<div class="name-wrapper">
+<span class="name">VX XII - Fundo de Investimento Imobiliário</span>
 </div>
 </a>
 <span class="admin-title">Adm.</span>
 <span class="admin">
                       Vortx</span>
+</div>
+</div>
+<div class="carousel-cell">
+<div class="item" id="item-RECX11">
+<div class="bg-wrapper"></div>
+<a href="/funds/recx11">
+<span class="symbol">RECX11</span>
+<div class="name-wrapper">
+<span class="name">FDO. INV. IMOB. REC FUNDO DE FUNDOS</span>
+</div>
+</a>
+<span class="admin-title">Adm.</span>
+<span class="admin">
+                      BTG Pactual</span>
+</div>
+</div>
+<div class="carousel-cell">
+<div class="item" id="item-FAED11">
+<div class="bg-wrapper"></div>
+<a href="/funds/faed11">
+<span class="symbol">FAED11</span>
+<div class="name-wrapper">
+<span class="name">FDO INV IMOB - FII ANHANGUERA EDUCACIONAL</span>
+</div>
+</a>
+<span class="admin-title">Adm.</span>
+<span class="admin">
+                      BTG Pactual</span>
 </div>
 </div>
 </div>
